Update sidebar link activation logic to include 'control' path

--- a/Proyecto_1_Diseno/templates/_base.html
+++ b/Proyecto_1_Diseno/templates/_base.html
@@ -30,7 +30,7 @@
           <h4>Vistas</h4>
           <a
             id="realtimeLink"
-            class="sidebar-link {% if 'historics' not in request.path %}active{% endif %}"
+            class="sidebar-link {% if 'historics' not in request.path and 'control' not in request.path %}active{% endif %}"
           >
             <span class="link-icon">🕐</span>
             Real-Time
